@@ -24,7 +24,7 @@ $I->checkOption( '#publish_form_8' );
 $I->checkOption( '#publish_form_9' );
 $I->checkOption( '#publish_form_10' );
 $I->checkOption( '#publish_form_11' );
-$I->click( [ 'css' => 'input[type=submit]' ]);
+$I->click( 'Update Settings' );
 $I->waitForText( 'Settings updated successfully', 3 );
 
 // Make sure we're logged out
@@ -36,7 +36,7 @@ $I->amOnPage( '/0004-form-submission-merge-tag-source' );
 $I->see( '0004 Form Submission Merge Tag Source' );
 $I->seeInField( 'Source', 'The value' );
 $I->seeInField( 'Email', 'test@test.test' );
-$I->click( [ 'css' => 'input[type=submit]' ]);
+$I->click( 'Submit' );
 // Verify the merge tag included a link in the confirmation message.
 $I->waitForText( 'We will get in touch with you shortly.', 3 );
 $I->dontSee( "Form Submission Merge Tag: {workflow_form_submission_link: assignee='email_field|2'}" );
@@ -45,6 +45,6 @@ $I->seeLink( '0004 Form Submission Merge Tag Target' );
 
 // Click the link and verify the submit page loads with the target form populated.
 $I->click( '0004 Form Submission Merge Tag Target' );
-$I->waitForElement( [ 'css' => 'input[type=submit]' ] );
+$I->waitForElement( [ 'css' => '.gform_footer .button' ] );
 
 $I->seeInField( 'Target', 'The value' );
